Fixed video loading screen misalignment and DRY'd some JS.

--- a/style.css
+++ b/style.css
@@ -668,17 +668,15 @@ img.crest.gone
 {
   background: #000;
   color: #fff;
+  display: table;
   font-family: 'proxima-nova';
   font-size: 36px;
   font-weight: 900;
-  text-align: center;
-  text-transform: uppercase;
   position: absolute;
   left: 0;
   top: 0;
   width: 800px;
-  height: 340px;
-  padding-top: 100px;
+  height: 450px;
   text-shadow: 0 0 5px #000;
   -webkit-transition: all .15s ease-in-out;
      -moz-transition: all .15s ease-in-out;
@@ -689,6 +687,16 @@ img.crest.gone
 #video_loading.inactive
 {
   opacity: 0;
+}
+
+#video_loading strong
+{
+  display: table-cell;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  text-transform: uppercase;
+  vertical-align: middle;
 }
 
 #video_contents
